--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "devoir-api-sophie-genot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.2",
@@ -18,6 +19,9 @@
     "ejs": "^3.1.10",
     "express": "^5.2.1",
     "express-session": "^1.18.2",
-    "mongoose": "^9.1.2"
+    "express-validator": "^7.3.1",
+    "jsondoc": "^0.0.0-rc.2",
+    "mongoose": "^9.1.2",
+    "nodemon": "^3.1.11"
   }
 }
